--- a/templates/sign_form.html
+++ b/templates/sign_form.html
@@ -1,11 +1,76 @@
-<h1>Sign Me</h1>
+<!doctype html>
+<html class="no-js" lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>The Ultimate Basil Resource</title>
+    <link rel="stylesheet" href="css/foundation.css" />
+    <link rel="stylesheet" href="css/stylesheet.css" />
+    <script src="js/vendor/modernizr.js"></script>
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='stylesheet.css') }}">
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='foundation.css') }}">
+    <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon"/>
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='mfglabs_iconset.css') }}">
+	<link href='http://fonts.googleapis.com/css?family=Cookie' rel='stylesheet' type='text/css'>
+</head>
+<body>
+
+<div class="parallax-background">
+  <div class="intro-text">
+    <span style="font-family:Cookie ; font-size:2em">Welcome to the Basil Database</span>
+    <p><i class="fi-arrow-down"></i></p>
+  </div>
+</div>
+
+<div class="parallax-content">
+
+
+<div class="row">
+<h1 style="font-family:Cookie ; font-size:2em ; text-align:center"> &#8220; contribute to the world's fastest growing basil resource &#8221; </h1>
+
 
 <form action='/submit' method='post'>
   <label for='name'>Name</label>
-  <input name='name' type='text'></input>
+  <input name='name' type='text' placeholder="e.g. Basil Ahmad"></input>
 
-  <label for='message'>Message</label>
-  <input name='message' type='text'></input>
+  <label for='message'>Your Nick-Name</label>
+  <input name='message' type='text' placeholder="Razzle Dazzle Basil"></input>
 
-  <input type='submit'></input>
+  <input type='submit' class="success large radius button"></input>
 </form>
+</div>
+
+<br>
+<br>
+
+<div class="row">
+
+<div class="testimonial-wrap">
+	<div class="row">
+		<div class="small-1 large-1 columns testimonial">
+			<div class="quote-marks">&#8220;</div>
+		</div>
+		<div class="small-11 large-11 columns testimonial">
+			<div class="quote">
+				<p>This Resource has changed my life. I don't know how i could get on if i didn' have this in my life. My thanks to the developers and their families.</p>
+			</div>
+			<div class="student">
+				<div class="photo"> </div>
+				<p>Benjamin Mather</p>
+				<p>Baritone, Rutgers University Glee Club</p>
+			</div>
+		</div>
+		
+	</div>
+	</div>           
+</div>
+
+
+
+</div>    <!-- closer for parallax content -->          
+        
+
+
+
+</body> 
+</html>
