--- a/templates/sign_form.html
+++ b/templates/sign_form.html
@@ -19,9 +19,10 @@
 <div class="parallax-background">
   <div class="intro-text">
     <span style="font-family:Cookie ; font-size:2em">Welcome to the Basil Database !</span>
-	<p> <i class="fa fa-arrow-down"></i> </p>
+	<p> <i class="fa fa-arrow-down fa-3x"></i> </p>
   </div>
 </div>
+
 
 <div class="parallax-content">
 
@@ -37,24 +38,18 @@
 			<div class="quote-marks">&#8220;</div>
 		</div>
 		<div class="small-11 large-11 columns testimonial">
-			<div class="quote">
-				<p>This Resource has changed my life. I don't know if I could go on if I didn't have this in my life. My thanks to the developers and their families. </p>
+			<div class="quote">  
+				<p style="color:#888">This resource has changed my life. I don't know if I could go on if I didn't have this in my life. My thanks to the developers and their families. </p> 		
 			</div>
 			<div class="student">
 				<!-- <div class="photo"> </div> -->
-				<p>Benjamin Mather</p>
-				<p>Baritone, Rutgers University Glee Club</p>
+				<p><span style="font-family:Cookie;font-size:2em">Benjamin Mather</span><span style="color:#888"> Baritone, Rutgers University Glee Club</span></p>
 			</div>
 		</div>
 		
 	</div>
 	</div>           
 </div>
-
-
-
-
-
 
 <div class="row">
 
@@ -74,7 +69,6 @@
 </div>  
   
 </div> <!--closer for large 4  content --> 
-
 
 
 <div class="large-4 columns">    <!-- Second Card -->
@@ -131,7 +125,7 @@
 <h1 style="font-family:Cookie ; font-size:2em ; text-align:center"> &#8220; Contribute to the world's fastest growing Basil resource &#8221; </h1>
 
 <form action='/submit' method='post'>
-  <label for='name'>Name</label>
+  <label for='name'>Your Name</label>
   <input name='name' type='text' placeholder="e.g. Basil Ahmad"></input>
   <label for='message'>Your Nick-Name For Basil</label>
   <input name='message' type='text' placeholder="Razzle Dazzle Basil"></input>
@@ -140,9 +134,24 @@
 </form>
 </div>
 
+<hr>
+<br>
+<br>
+<div class="row text-center"> 
+<div class="large-12 columns">
+
+<h1 style="font-family:Cookie ; font-size:2em ; text-align:center"> &#8220; Share Basil with a friend... &#8221; </h1>
+<form action='/email' method='post'>
+<label for='email'>Email</label>
+<input name='email' type='text' placeholder="e.g. John.doe@example.com"></input>
+
+<form>
+
+</div> 
+</div>
+
 
 </div>    <!-- closer for parallax content -->          
         
-
 </body> 
 </html>
