--- a/templates/sign_form.html
+++ b/templates/sign_form.html
@@ -125,9 +125,9 @@
 <h1 style="font-family:Cookie ; font-size:2em ; text-align:center"> &#8220; Contribute to the world's fastest growing Basil resource &#8221; </h1>
 
 <form action='/submit' method='post'>
-  <label for='name'>Your Name</label>
+  <label>Your Name</label>
   <input name='name' type='text' placeholder="e.g. Basil Ahmad"></input>
-  <label for='message'>Your Nick-Name For Basil</label>
+  <label>Your Nick-Name For Basil</label>
   <input name='message' type='text' placeholder="Razzle Dazzle Basil"></input>
 
   <input type='submit' class="success large radius button"></input>
