front end enhancements

--- a/templates/sign_form.html
+++ b/templates/sign_form.html
@@ -43,7 +43,7 @@
 			</div>
 			<div class="student">
 				<!-- <div class="photo"> </div> -->
-				<p><span style="font-family:Cookie;font-size:2em">Benjamin Mather</span><span style="color:#888"> Baritone, Rutgers University Glee Club</span></p>
+				<p><span style="font-family:Cookie;font-size:2em">Benjamin Noland</span><span style="color:#888"> Math Guy</span></p>
 			</div>
 		</div>
 		
@@ -139,19 +139,22 @@
 <br>
 <div class="row text-center"> 
 <div class="large-12 columns">
-
 <h1 style="font-family:Cookie ; font-size:2em ; text-align:center"> &#8220; Share Basil with a friend... &#8221; </h1>
 <form action='/email' method='post'>
 <label for='email'>Email</label>
 <input name='email' type='text' placeholder="e.g. John.doe@example.com"></input>
-
-<form>
+</form>
 
 </div> 
 </div>
 
+<div class="row text-center">
+<br>
+<br>
+<p style="font-family:cookie;font-size:2em"><span style="color:#888">Website by</span><a href="http://davidawad.github.io"> David Awad</a></p>
 
-</div>    <!-- closer for parallax content -->          
-        
+</div>
+
+</div>    <!-- closer for parallax content -->                  
 </body> 
 </html>
