--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -1,3 +1,5 @@
+/*for parallax */
+
 body {
 	font-family: "Open Sans", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif !important;
 	font-weight: 200;
