--- a/templates/guest_book.html
+++ b/templates/guest_book.html
@@ -60,6 +60,7 @@
     <th id="Name">Author</th>
     <th id="Nick-Name">Nick Name</th>
   </tr>
+
 {% for signature in signatures %}
   <tr>
     <th id="name" headers="n_name"> {{ signature['name'] }} </th>
@@ -79,8 +80,8 @@
     <th id="Nick-Name">Nick Name</th>
   </tr>
 <tr>
-    <th id="Name"> </th>
-    <th id="Nick-Name">  </th>
+    <th id="Name"> David Awad</th>
+    <th id="Nick-Name"> Shabazz </th>
 </tr>
 </table>
 
@@ -91,9 +92,9 @@
       <hr/>
       <div class="row">
         <div class="large-5 columns">
-          <p>© Copyright no one at all. Go to town.</p>
+          <p>© David Awad, a Basildb Affiliate</p>
         </div>
-        <div class="large-7 columns">
+        <!--<div class="large-7 columns">
           <ul class="inline-list right">
             <li><a href="#">Section 1</a></li>
             <li><a href="#">Section 2</a></li>
@@ -102,7 +103,7 @@
             <li><a href="#">Section 5</a></li>
             <li><a href="#">Section 6</a></li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
   </footer>
