--- a/templates/sign_form.html
+++ b/templates/sign_form.html
@@ -19,7 +19,7 @@
 <div class="parallax-background">
   <div class="intro-text">
     <span style="font-family:Cookie ; font-size:2em">Welcome to the Basil Database !</span>
-	<p> <i class="fa fa-arrow-down fa-3x"></i> </p>
+    <p> <!-- <i class="fa fa-arrow-down fa-3x"></i> --> </p>
   </div>
 </div>
 
@@ -38,17 +38,17 @@
 			<div class="quote-marks">&#8220;</div>
 		</div>
 		<div class="small-11 large-11 columns testimonial">
-			<div class="quote">  
-				<p style="color:#888">This resource has changed my life. I don't know if I could go on if I didn't have this in my life. My thanks to the developers and their families. </p> 		
+			<div class="quote">
+				<p style="color:#888">This resource has changed my life. I don't know if I could go on if I didn't have this in my life. My thanks to the developers and their families. </p>
 			</div>
 			<div class="student">
 				<!-- <div class="photo"> </div> -->
 				<p><span style="font-family:Cookie;font-size:2em">Benjamin Noland</span><span style="color:#888"> Math Guy</span></p>
 			</div>
 		</div>
-		
+
 	</div>
-	</div>           
+	</div>
 </div>
 
 <div class="row">
@@ -66,9 +66,9 @@
 			<p> He's taking WAYY too many classes next semester instead of just going for a regular degree like te rest of us.</p>
 		</div>
 	</div>
-</div>  
-  
-</div> <!--closer for large 4  content --> 
+</div>
+
+</div> <!--closer for large 4  content -->
 
 
 <div class="large-4 columns">    <!-- Second Card -->
@@ -82,17 +82,17 @@
 			<h5>He literally NEVER knows his major.</h5>
 			<p>This is the crux of the basil, he has never known what he wants to do with his life.</p>
     		<p>He is constantly reminding us of how much he DOESN'T know what he wants</p>
-			
-			<br> 
+
 			<br>
-			
+			<br>
+
 			<p>He's kind of annoying about it.</p>
 
 		</div>
 	</div>
-</div>  
-  
-</div> <!--closer for large 4  content --> 
+</div>
+
+</div> <!--closer for large 4  content -->
 
 
 
@@ -112,11 +112,11 @@
 			<p>The back of the card is intentionally long, so that we can show both an example where the card is constrained to a square and where it is as long as the content on either side requires.</p>
 		</div>
 	</div>
-</div>  
-  
-</div> <!--closer for large 4  content --> 
+</div>
 
-</div> <!--closer for row content --> 
+</div> <!--closer for large 4  content -->
+
+</div> <!--closer for row content -->
 
 <br>
 <br>
@@ -137,7 +137,7 @@
 <hr>
 <br>
 <br>
-<div class="row text-center"> 
+<div class="row text-center">
 <div class="large-12 columns">
 <h1 style="font-family:Cookie ; font-size:2em ; text-align:center"> &#8220; Share Basil with a friend... &#8221; </h1>
 <form action='/email' method='post'>
@@ -145,7 +145,7 @@
 <input name='email' type='text' placeholder="e.g. John.doe@example.com"></input>
 </form>
 
-</div> 
+</div>
 </div>
 
 <div class="row text-center">
@@ -155,6 +155,6 @@
 
 </div>
 
-</div>    <!-- closer for parallax content -->                  
-</body> 
+</div>    <!-- closer for parallax content -->
+</body>
 </html>
